// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-item-media-type should get media type items by ids 1`] = `
{
  "content": [
    {
      "text": "[{"icon":"icon-folder","name":"_Test Media Type Item 1","id":"00000000-0000-0000-0000-000000000000","flags":[]},{"icon":"icon-folder","name":"_Test Media Type Item 2","id":"00000000-0000-0000-0000-000000000000","flags":[]}]",
      "type": "text",
    },
  ],
}
`;

exports[`get-item-media-type should handle non-existent media type 1`] = `
{
  "content": [
    {
      "text": "[]",
      "type": "text",
    },
  ],
}
`;
